# minipwn

./: .gitignore  Cargo.toml  README.md
data/: system_prompt.md
data/themes/: cyberpunk.toml  dracula.toml  matrix.toml  nord.toml
src/: main.rs  system_prompt.md  web.rs
src/agent/: format.rs  mod.rs  ui.rs
src/ai/: client.rs  mod.rs  models.rs
src/commands/: apikey.rs  chat.rs  clear.rs  help.rs  mod.rs  mode.rs  model.rs  provider.rs  theme.rs  usage.rs  worker.rs
src/config/: mod.rs  paths.rs  providers.rs  secrets.rs  usage.rs  worker_cfg.rs  workspace.rs
src/protocol/: mod.rs  worker.rs
src/tools/: executor.rs  fs_tools.rs  mod.rs  sanitize.rs  shell_tools.rs
src/tui/: app.rs  commands.rs  events.rs  input.rs  mod.rs  render.rs  theme.rs  worker_select.rs
src/tui/screens/: deploy.rs  forms.rs  mod.rs  select.rs
src/worker/: client.rs  discovery.rs  docker.rs  handlers.rs  local.rs  mod.rs  remote.rs  routes.rs  traits.rs
src/worker/docker/: client.rs  mod.rs
src/worker/server/: handlers.rs  mod.rs  state.rs
web/: app.js  client.js  index.html  style.css
