[package]
name = "minipwn"
version = "0.1.0"
edition = "2024"
authors = ["sammwy"]
description = "Autonomous pentesting agent"
repository = "https://github.com/sammwyy/minipwn"
license = "MIT"

[[bin]]
name = "minipwn"
path = "src/main.rs"

[dependencies]
tokio = { version = "=1.36.0", features = ["full"] }
ratatui = "0.27"
crossterm = "=0.27.0"
tiny_http = "0.12"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
minreq = { version = "2.11", features = ["https", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "=5.0.1"
uuid = { version = "=1.7.0", features = ["v4"] }
rand = "=0.8.5"
clap = { version = "=4.5.3", features = ["derive"] }
anyhow = "=1.0.80"
thiserror = "=1.0.57"
chrono = { version = "=0.4.34", features = ["serde"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
async-trait = "0.1"
pulldown-cmark = "0.13.3"
